--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,10 +19,10 @@
     --popover-foreground: 240 10% 3.9%;
 
     --primary: 240 5.9% 10%;
-    --primary-foreground: 0 0% 98%;
+    --primary-foreground: 329, 0%, 100%;
 
     --secondary: 240 4.8% 95.9%;
-    --secondary-foreground: 240 5.9% 10%;
+    --secondary-foreground: var(--background-dark);
 
     --muted: 240 4.8% 95.9%;
     --muted-foreground: 240 3.8% 46.1%;
